fix misaligned fashion blocks

--- a/fashion.css
+++ b/fashion.css
@@ -23,7 +23,7 @@
 	position:absolute;
 	top:20px;
 	right:0;
-	
+
 }
 
 .nav-bar li{
@@ -57,7 +57,7 @@
 	text-align: center;
 	padding:30px 0px 0px 0px;
 	border-bottom: double grey;
-	width:400px;	
+	width:400px;
 }
 .fashion-body {
 	text-align: center;
@@ -69,9 +69,10 @@
 
 .row-one-left{
 	display: inline-block;
-	width:40%;	
+  vertical-align: top;
+	width:40%;
 	padding: 30px ;
-	margin-right: 
+	margin-right:
 }
 
 
@@ -82,7 +83,7 @@
 }
 .christmas_special{
 	display: inline-block;
-	width:90%;	
+	width:90%;
 	margin:auto;
 	padding-bottom: 50px;
 	border-bottom: 1px solid grey;
@@ -94,7 +95,8 @@
 
 .row-one-right{
 	display: inline-block;
-	width:40%;	
+  vertical-align: top;
+	width:40%;
 	padding: 30px;
 	margin-left:
 }
@@ -172,7 +174,7 @@ padding: 5px 0px;
 	margin:auto;
 	border:pink 2px dashed;
 	border-radius:20px;
-	
+
 }
 
 #mc_embed_signup{
@@ -194,7 +196,7 @@ form#mc-embedded-subscribe-form{
 	padding: 0px;
 	border-radius: 10px;
 	background:pink;
-	
+
 }
 
 .mc-field-group{
@@ -288,7 +290,7 @@ form#mc-embedded-subscribe-form{
 	padding:10px 0px;
 	width:50%;
 	margin:auto;
-	
+
 }
 
 .email_font{
@@ -302,14 +304,14 @@ form#mc-embedded-subscribe-form{
 .mail_line{
 	font-family: 'Lato', sans-serif;
 	font-size: 14px;
-	font-weight: 300;	
+	font-weight: 300;
 }
 
 .mail_line_smaller{
 	font-family: 'Lato', sans-serif;
 	font-size: 10px;
 	font-weight: 300;
-	padding: 5px 0px;	
+	padding: 5px 0px;
 }
 #mc_embed_signup{
 	width:40%;
@@ -331,7 +333,7 @@ form#mc-embedded-subscribe-form{
 	}
 	.nav-bar li{
 		float:left;
-		padding-bottom: 5px;		
+		padding-bottom: 5px;
 	}
-	
+
 }
